--- a/.github/workflows/dev-image.yml
+++ b/.github/workflows/dev-image.yml
@@ -47,7 +47,7 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ${{ env.TAG }}
-          build-args: DATABASE=sqlite
+          build-args: DATABASE=sqlite,BUILD=enterprise
           cache-from: type=registry,ref=${{ vars.DOCKER_HUB_REPO }}:buildcache
           cache-to: type=registry,ref=${{ vars.DOCKER_HUB_REPO }}:buildcache,mode=max
             
@@ -58,7 +58,7 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ${{ env.TAG_PG }}
-          build-args: DATABASE=pg
+          build-args: DATABASE=pg,BUILD=enterprise
           cache-from: type=registry,ref=${{ vars.DOCKER_HUB_REPO }}:buildcache-pg
           cache-to: type=registry,ref=${{ vars.DOCKER_HUB_REPO }}:buildcache-pg,mode=max
           
@@ -114,7 +114,7 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ${{ env.TAG }}
-          build-args: DATABASE=sqlite
+          build-args: DATABASE=sqlite,BUILD=enterprise
           cache-from: type=registry,ref=${{ vars.DOCKER_HUB_REPO }}:buildcache
           cache-to: type=registry,ref=${{ vars.DOCKER_HUB_REPO }}:buildcache,mode=max
             
@@ -125,7 +125,7 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ${{ env.TAG_PG }}
-          build-args: DATABASE=pg
+          build-args: DATABASE=pg,BUILD=enterprise
           cache-from: type=registry,ref=${{ vars.DOCKER_HUB_REPO }}:buildcache-pg
           cache-to: type=registry,ref=${{ vars.DOCKER_HUB_REPO }}:buildcache-pg,mode=max
           
