revert format:write

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "start": "ENVIRONMENT=prod node dist/migrations.mjs && ENVIRONMENT=prod NODE_ENV=development node --enable-source-maps dist/server.mjs",
         "email": "email dev --dir server/emails/templates --port 3005",
         "build:cli": "node esbuild.mjs -e cli/index.ts -o dist/cli.mjs",
-        "format:write": "prettier --write ."
+        "format": "prettier --write ."
     },
     "dependencies": {
         "@asteasolutions/zod-to-openapi": "8.4.0",
