--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
         "dev": "NODE_ENV=development ENVIRONMENT=dev tsx watch server/index.ts",
         "dev:check": "npx tsc --noEmit && npm run format:check",
         "dev:setup": "cp config/config.example.yml config/config.yml && npm run set:oss && npm run set:sqlite && npm run db:sqlite",
-        "db:pg": "drizzle-kit generate --config=./drizzle.config.ts && npx tsx server/db/pg/migrate.ts",
-        "db:sqlite": "drizzle-kit generate --config=./drizzle.config.ts && npx tsx server/db/sqlite/migrate.ts",
+        "db:generate": "drizzle-kit generate --config=./drizzle.config.ts",
+        "db:pg": "npx tsx server/db/pg/migrate.ts",
+        "db:sqlite": "npx tsx server/db/sqlite/migrate.ts",
         "db:studio": "drizzle-kit studio --config=./drizzle.config.ts",
         "db:clear-migrations": "rm -rf server/migrations",
         "set:oss": "echo 'export const build = \"oss\" as \"saas\" | \"enterprise\" | \"oss\";' > server/build.ts && cp tsconfig.oss.json tsconfig.json",
