--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "scripts": {
         "dev": "NODE_ENV=development ENVIRONMENT=dev tsx watch server/index.ts",
         "dev:check": "npx tsc --noEmit && npm run format:check",
-        "dev:setup": "cp config/config.example.yml config/config.yml && npm run set:oss && npm run set:sqlite && npm run db:sqlite",
+        "dev:setup": "cp config/config.example.yml config/config.yml && npm run set:oss && npm run set:sqlite && npm run db:generate && npm run db:sqlite",
         "db:generate": "drizzle-kit generate --config=./drizzle.config.ts",
         "db:pg": "npx tsx server/db/pg/migrate.ts",
         "db:sqlite": "npx tsx server/db/sqlite/migrate.ts",
